fix overflowing on small screens

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,9 @@ font-family: "Chakra Petch", sans-serif;
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
